server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__agent_endpoints_snapshots@agent_modes_opencode.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: normalize_agent_modes(&modes)
---
modes:
  - description: true
    id: build
    name: Build
  - description: true
    id: custom
    name: Custom
  - description: true
    id: plan
    name: Plan
